Fix clipped scrollbar

--- a/src/js/components/Landing/Landing.sass
+++ b/src/js/components/Landing/Landing.sass
@@ -46,7 +46,7 @@
   height: 100vh
 
   opacity: 0.95
-  background: black
+  // background: black
   background-size: cover
   background-position: 50% 0%
 
